fixing sticky button, improving readability
sticky button slid behind specialty imgs and covered some text on certain screen widths.

--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@ header {
 
   position: fixed;
   bottom: 0;
-  z-index: 5;
+  z-index: 100;
   display: flex;
   flex-flow: row nowrap;
   justify-content: end;
@@ -480,7 +480,7 @@ header {
   width: 100%;
   position: absolute;
   bottom: 0px;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
 }
 
 /* Summary */
